[metadata]
license = MIT
license_file = LICENSE
classifier =
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent

[options]
install_requires =
    ensure==1.0.2
python_requires = >=3.7    

[options.extras_require]
testing =
    pytest>=7.1.3     # to run unit test and integration test
    mypy>=0.971       # check whether there is typing error or not
    flake8>=5.0.4
    tox>=3.25.1       # to test locally and creating working environment
    black>=22.8.0     # for checking whether we are following exact python structure

[options.package_data]
deepClassifier = py.typed
  
[flake8]
max-line-length = 160
exclude = __init__.py
